# docs/swagger.json
@@ -18,6 +18,20 @@
                     "reports"
                 ],
                 "summary": "List reports",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Maximum number of items to return; 0 means no limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items to skip",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -26,6 +40,12 @@
                             "items": {
                                 "$ref": "#/definitions/analytics-service_service_analytics.Report"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gorouter.ErrorResponse"
                         }
                     },
                     "500": {
